# string-gen

./: .gitignore  404.html  LICENSE  Pipfile  README.md  asdfadf.py  index.html  mkdocs.yml  objects.inv  plan.md  pyproject.toml  ruff.toml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: docs.yml  python-package.yml  python-publish.yml
docs/: index.md
docs/examples/: cookbook.md
docs/guide/: configuration.md  generation.md  getting-started.md  patterns-syntax.md
docs/reference/: alphabets.md  api.md  patterns.md
examples/cookbook/: index.html
guide/configuration/: index.html
guide/generation/: index.html
guide/getting-started/: index.html
guide/patterns-syntax/: index.html
reference/alphabets/: index.html
reference/api/: index.html
reference/patterns/: index.html
search/: search_index.json
string_gen/: __init__.py  alphabets.py  generator.py  patterns.py
tests/: pytest.ini  test_string_gen.py
